# garden

./: .gitignore  README.md  SPEC.md  garden.toml  pyproject.toml
agents/curator/: agent.toml
agents/hello/: agent.toml
core/: cli.py  dispatcher.py  inbox.py  manifest.py  registry.py  sandbox.py  scheduler.py
core/adapters/: __init__.py  base.py  claude_code.py  codex.py  hermes.py  openrouter.py
core/gateways/: __init__.py  discord.py
docs/: carry.md  ctx.md  messaging.md  sandbox.md
examples/curator/: agent.toml
examples/garden/: agent.toml  help.py
examples/hello/functions/: greet.py
tests/: test_core.py
utils/: carry.py  context.py  notes.py
