[project]
name = "garden"
version = "0.1.0"
description = "A space for agents to grow and flourish alongside each other."
requires-python = ">=3.11"
dependencies = [
    "croniter>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
garden = "core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "utils"]
